--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <script src="js/ejercicio7.js"></script>
     <script src="js/ejercicio8.js"></script> -->
     <!-- <script src="js/ejercicio9.js"></script> -->
-    <script src="js/ejercicio10.js"></script>
+    <!-- <script src="js/ejercicio10.js"></script> -->
     <!-- <script src="js/ejercicio11.js"></script> -->
+    <script src="js/ejercicio9bucles.js"></script>
   </body>
 </html>
 
